--- a/roles/wordpress/tasks/main.yml
+++ b/roles/wordpress/tasks/main.yml
@@ -1,9 +1,9 @@
 ---
 # tasks file for wordpress
 - name: "Install httpd package"
-  yum: name={{ item }} state=present
+  apt: name={{ item }} state=present
   with_items:
-      - httpd
+      - apache
       - php
       - php-gd
       - php-mysql
