--- a/roles/wordpress/handlers/main.yml
+++ b/roles/wordpress/handlers/main.yml
@@ -2,11 +2,11 @@
 # handlers file for wordpress
 - name: "Enable Apache"
   service:
-    name: httpd
+    name: apache
     state: started
     enabled: yes
 
 - name: "Restart Apache"
   service:
-    name: httpd
+    name: apache
     state: restarted
